--- a/client/html/index.html
+++ b/client/html/index.html
@@ -1,30 +1,47 @@
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>bitdisc</title>
-    <script type="application/javascript" src="public/js/bundle.min.js"></script>
-    <link href="public/css/bundle.min.css" rel="stylesheet" />
-</head>
-<body ng-app="app">
-    <nav class="navbar navbar-inverse navbar-fixed-top" ng-controller="NavCtrl">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#/">bitdisc</a>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <title>bitdisc</title>
+        <script type="application/javascript" src="public/js/bundle.min.js"></script>
+        <link href="public/css/bundle.min.css" rel="stylesheet" />
+    </head>
+    <body ng-app="app" ng-controller="NavCtrl">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#/">bitdisc</a>
+                </div>
+                <div id="navbar" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li ng-class="{active: isActive('/')}"><a href="#/">Home</a></li>
+                    </ul>
+                    <ul style="float: right;" class="nav navbar-nav">
+                        <li ng-show="auth"><a ng-click="signOut()">Sign out</a></li>
+                        <li ng-hide="auth"><a ng-click="signIn()">Sign in</a></li>
+                    </ul>
+                </div>
             </div>
-            <div id="navbar" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li ng-class="{active: isActive('/')}"><a href="#/">Home</a></li>
-                </ul>
-            </div>
+        </nav>
+        <div ng-show="auth">
+            <scoreinput id="score-input-modal"></scoreinput>
+            <gamesetup id="game-setup-modal"></gamesetup>
         </div>
-    </nav>
 
-    <div class="container" ng-view />
-</body>
+        <div ng-show="auth" class="container" ng-view></div>
+
+        <div ng-hide="auth" class="container">
+            <span class="h1">
+                Welcome to bitdisc<br />
+                <span class="small">You must sign in to continue</span>
+            </span>
+        </div>
+    </body>
 </html>
