--- a/client/html/user-directive.html
+++ b/client/html/user-directive.html
@@ -1,2 +1,8 @@
-<img ng-src="{{avatar}}" style="height: 30px;" />
-<strong ng-bind="user.name" />
+<div>
+    <div ng-if="contains.left()" style="height: 30px; line-height: 30px; display: inline-block; margin-right: 15px;" ng-transclude="left"></div>
+    <div style="display: inline-block;">
+        <img ng-src="{{avatar}}" style="height: 30px;" />
+        <strong ng-bind="user.name" />
+    </div>
+    <div ng-if="contains.right()" class="pull-right" style="height: 30px; line-height: 30px;" ng-transclude="right"></div>
+</div>
