Auth bug fixes and possibility to finish game.

--- a/client/html/scorecard-directive.html
+++ b/client/html/scorecard-directive.html
@@ -20,7 +20,7 @@
         </tr>
         </tbody>
     </table>
-    <div class="panel-footer">
+    <div class="panel-footer" ng-show="game && !game.end">
         <a class="btn btn-primary" style="width: 100%;" ng-click="finish()">Finish game</a>
     </div>
 </div>
