--- a/client/html/index.html
+++ b/client/html/index.html
@@ -4,8 +4,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <title>bitdisc</title>
-        <script type="application/javascript" src="public/js/bundle.min.js"></script>
-        <link href="public/css/bundle.min.css" rel="stylesheet" />
+        <script type="application/javascript" src="public/js/bundle.js"></script>
+        <link rel="stylesheet" href="public/css/bundle.css" />
     </head>
     <body ng-app="app" ng-controller="NavCtrl">
         <nav class="navbar navbar-inverse navbar-fixed-top">
