--- a/client/html/index.html
+++ b/client/html/index.html
@@ -22,10 +22,12 @@
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li ng-class="{active: isActive('/')}"><a href="#/">Home</a></li>
+                        <li ng-class="{active: isActive('/games')}"><a href="#/games">Games</a></li>
+                        <li ng-class="{active: isActive('/courses')}"><a href="#/courses">Courses</a></li>
+                        <li ng-class="{active: isActive('/users')}"><a href="#/users">Users</a></li>
                     </ul>
                     <ul style="float: right;" class="nav navbar-nav">
                         <li ng-show="auth"><a ng-click="signOut()">Sign out</a></li>
-                        <li ng-hide="auth"><a ng-click="signIn()">Sign in</a></li>
                     </ul>
                 </div>
             </div>
@@ -33,15 +35,22 @@
         <div ng-show="auth">
             <scoreinput id="score-input-modal"></scoreinput>
             <gamesetup id="game-setup-modal"></gamesetup>
+            <gameoptions id="game-options-modal"></gameoptions>
         </div>
 
         <div ng-show="auth" class="container" ng-view></div>
 
         <div ng-hide="auth" class="container">
-            <span class="h1">
+            <h1>
                 Welcome to bitdisc<br />
-                <span class="small">You must sign in to continue</span>
-            </span>
+                <span class="small">Please sign in to continue</span>
+            </h1>
+            <p>
+                <a class="btn btn-social btn-google" ng-click="signIn()">
+                    <span class="fa fa-google"></span>
+                    Sign in with Google
+                </a>
+            </p>
         </div>
     </body>
 </html>
