--- a/client/html/index.html
+++ b/client/html/index.html
@@ -35,6 +35,7 @@
         <div ng-show="auth">
             <scoreinput id="score-input-modal"></scoreinput>
             <gamesetup id="game-setup-modal"></gamesetup>
+            <guestsetup id="guest-setup-modal"></guestsetup>
             <gameoptions id="game-options-modal"></gameoptions>
         </div>
 
