--- a/client/html/index.html
+++ b/client/html/index.html
@@ -48,9 +48,13 @@
                 <span class="small">Please sign in to continue</span>
             </h1>
             <p>
-                <a class="btn btn-social btn-google" ng-click="signIn()">
+                <a class="btn btn-social btn-google" ng-click="signIn('google')">
                     <span class="fa fa-google"></span>
                     Sign in with Google
+                </a>
+                <a class="btn btn-social btn-facebook" ng-click="signIn('facebook')">
+                    <span class="fa fa-facebook"></span>
+                    Sign in with Facebook
                 </a>
             </p>
         </div>
