--- a/client/html/users.html
+++ b/client/html/users.html
@@ -1,5 +1,6 @@
 <div class="row">
-    <div class="col-md-4 col-md-offset-4">
+    <div class="col-md-4">
+        {{ users }}
         <panel heading="'Users'">
             <panel-list>
                 <a ng-repeat="user in users | orderBy: 'name'" class="list-group-item">
