--- a/client/html/index.html
+++ b/client/html/index.html
@@ -38,6 +38,7 @@
             <gamesetup id="game-setup-modal"></gamesetup>
             <guestsetup id="guest-setup-modal"></guestsetup>
             <gameoptions id="game-options-modal"></gameoptions>
+            <userselect id="user-select-modal"></userselect>
         </div>
 
         <div ng-show="auth" class="container" ng-view></div>
